
### August XX 2022, Release version 0.14.0 ###

  * MODIFIED:
    * removed old code in utils.py.
    * if no connexion or no forecast can be parsed, a no data icon is now displayed in forecast sections, and labels are
     cleared.
     * the function to update the config file has been changed for better performance.

  * ADDED:
    * a function to update a configuration file has been introduced.
    * few new options have been added to the configuration file.
    * new options have been added to the option window.
    * it is now possible to ask the weather station to test automatically the connectivity every period of time defined
    by the user if it is offline.
    * new options for in and out temperature/humidity/pressure, have been added to the option window.
    * it is now possible to choose which sensor will feed temperature/humidity/pressure data.
    * the sensor which feeds temperature data will feed battery and signal data.
    * an error message has been added if all options concerning database are empty.

  * FIXED:
    * a widget has been forgotten in keyboard window.
    * if no remote sensors are registered, the mqtt thread is none and not well cleared when the gui is closed.


### August 20 2022, Release version 0.13.0 ###

  * FIXED:
    * when exporting data, if an error occurred and a retry is done, the text in the warning box is not cleared.
    * two variables weren't initialized correctly.

  * ADDED :
    * gusts have been added to 1h forecast window.
    * gusts have been added to 6h forecast window.
    * gusts have been added to 1d OpenWeather forecast window.
    * an icon was missing.
    * an icon for gusts has been added.
    * an icon to open file has been added.
    * if sensor data are old (>2h), a message is displayed.
    * a new infowindow has been introduced.
    * a new way to obtain elevation has been introduced.

  * MODIFIED: