@@ -6,6 +6,7 @@
     * if no connexion or no forecast can be parsed, a no data icon is now displayed in forecast sections, and labels are
      cleared.
      * the function to update the config file has been changed for better performance.
+     * the creation and update of the config file have been updated with the new API.
 
   * ADDED:
     * a function to update a configuration file has been introduced.
